--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,73 @@
         </div>
       </nav>
 
+      <div class="container">
 
+        <div class="row ">
+            <br><br>
+            <div class="col s6 m6 info" style="margin-left: 25%">
+              <h5 class="center-align register">Login</h5>
+              <br>
+            </div>
+        </div>
+        <div class="row">
+            <form class="col s6 m6" id="reg-form" style="margin-left: 25%">
+                <div class="input-field col s12">
+                  <input id="loginUsername" type="text" class="validate" required>
+                  <label for="loginUsername">Username</label>
+                </div>
+                <!-- <div class="input-field col s12">
+                  <input id="password" type="password" class="" minlength="6" required>
+                  <label for="password">Password</label>
+                </div> -->
+                <div class="input-field col s6">
+                    <a href="/" id="login-button" class="btn waves-effect waves-light light-blue accent-4">Login
+                        <i class="material-icons right">done</i>
+                    </a>
+                </div>
+            </form>
+        </div>
+
+        <br><br>
+      </div>
+
+      <div class="container">
+
+        <div class="row ">
+            <br><br>
+            <div class="col s6 m6 info" style="margin-left: 25%">
+              <h5 class="center-align register">Sign up for a free account</h5>
+              <br>
+            </div>
+        </div>
+        <div class="row">
+            <form class="col s6 m6" id="reg-form" style="margin-left: 25%">
+                <div class="input-field col s12">
+                  <input id="username" type="text" class="validate" required>
+                  <label for="username">User Name</label>
+                </div>
+                <!-- <div class="input-field col s12">
+                  <input id="password" type="password" class="" minlength="6" required>
+                  <label for="password">Password</label>
+                </div> -->
+                <div class="input-field col s6">
+                  <input id="firstname" type="text" class="validate" required>
+                  <label for="firstname">First Name</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="lastname" type="text" class="validate" required>
+                  <label for="lastname">Last Name</label>
+                </div>
+                <div class="input-field col s12">
+                  <a href="/" id="signup-button" class="btn waves-effect waves-light light-blue accent-4">Signup
+                      <i class="material-icons right">done</i>
+                  </a>
+              </div>
+            </form>
+        </div>
+
+        <br><br>
+      </div>
 
 
 
