--- a/public/main.html
+++ b/public/main.html
@@ -50,8 +50,51 @@
         </div>
     </nav>
 
+    <div class="container">
 
+      <div class="row">
+          <form class="col s6 m6" id="reg-form">
+              <div class="col s6 m6 info">
+                  <h5 class="left-align register" style="margin-left: 0px">Create Column</h5>
+                </div>
+              <div class="input-field col s12">
+                <input id="postText" type="text" class="validate" required>
+                <label for="postText">Name</label>
+              </div>
+              <div class="input-field col s6">
+                  <a href="#" id="post-button" class="btn waves-effect waves-light light-blue accent-4">Submit
+                      <i class="material-icons right">done</i>
+                  </a>
+              </div>
+          </form>
 
+          <form class="col s6 m6" id="reg-form">
+              <div class="col s6 m6 info">
+                  <h5 class="left-align register" style="margin-left: 0px">Read, Delete and Update Column</h5>
+                </div>
+                <div class="col s12 m12 info">
+                  <h5 class="left-align register">Item 1</h5>
+                  <!-- <p class="light"> There's currently no item here</p> -->
+                </div>
+              <div class="input-field col s6">
+                  <a href="#" id="addSchedule-button" class="btn waves-effect waves-light light-blue accent-4">Update
+                      <i class="material-icons right">add</i>
+                  </a>
+              </div>
+              <div class="input-field col s6">
+                <input id="postText" type="text" class="validate" required>
+                <label for="postText">Update here</label>
+              </div>
+              <div class="input-field col s6 left-align">
+                  <a href="#" id="delete-button" class="btn waves-effect waves-light light-blue accent-4">Delete
+                      <!-- <i class="material-icons right">done</i> -->
+                  </a>
+              </div>
+          </form>
+      </div>
+
+      <br><br>
+    </div>
 
 
 
