--- a/public/main.html
+++ b/public/main.html
@@ -58,11 +58,11 @@
                   <h5 class="left-align register" style="margin-left: 0px">Create Column</h5>
                 </div>
               <div class="input-field col s12">
-                <input id="postText" type="text" class="validate" required>
-                <label for="postText">Name</label>
+                <input id="nameText" type="text" class="validate" required>
+                <label for="nameText">Name</label>
               </div>
               <div class="input-field col s6">
-                  <a href="#" id="post-button" class="btn waves-effect waves-light light-blue accent-4">Submit
+                  <a href="#" id="submitCreate-button" class="btn waves-effect waves-light light-blue accent-4">Submit
                       <i class="material-icons right">done</i>
                   </a>
               </div>
@@ -82,8 +82,8 @@
                   </a>
               </div>
               <div class="input-field col s6">
-                <input id="postText" type="text" class="validate" required>
-                <label for="postText">Update here</label>
+                <input id="updateText" type="text" class="validate" required>
+                <label for="updateText">Update here</label>
               </div>
               <div class="input-field col s6 left-align">
                   <a href="#" id="delete-button" class="btn waves-effect waves-light light-blue accent-4">Delete
