--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                   <label for="password">Password</label>
                 </div> -->
                 <div class="input-field col s6">
-                    <a href="/" id="login-button" class="btn waves-effect waves-light light-blue accent-4">Login
+                    <a href="/login" id="login-button" class="btn waves-effect waves-light light-blue accent-4">Login
                         <i class="material-icons right">done</i>
                     </a>
                 </div>
@@ -108,7 +108,7 @@
                   <label for="lastname">Last Name</label>
                 </div>
                 <div class="input-field col s12">
-                  <a href="/" id="signup-button" class="btn waves-effect waves-light light-blue accent-4">Signup
+                  <a href="/signup" id="signup-button" class="btn waves-effect waves-light light-blue accent-4">Signup
                       <i class="material-icons right">done</i>
                   </a>
               </div>
