--- a/public/main.html
+++ b/public/main.html
@@ -71,11 +71,11 @@
           <form class="col s6 m6" id="reg-form">
               <div class="col s6 m6 info">
                   <h5 class="left-align register" style="margin-left: 0px">Read, Delete and Update Column</h5>
-                </div>
-                <div class="col s12 m12 info">
-                  <h5 class="left-align register">Item 1</h5>
+              </div>
+              <div class="col s12 m12 info">
+                  <h5 class="left-align register" id="retrieveTest">Item 1</h5>
                   <!-- <p class="light"> There's currently no item here</p> -->
-                </div>
+              </div>
               <div class="input-field col s6">
                   <a href="#" id="addSchedule-button" class="btn waves-effect waves-light light-blue accent-4">Update
                       <i class="material-icons right">add</i>
